created the api for categories
